feat: support URL-encoded object listings
